// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`I18nHelpers should attempt to perform a component translate: translated component 1`] = `
<withtranslation
  props="{
  "children": []
}"
>
  <div>
    t(lorem.ipsum, hello world)
  </div>
</withtranslation>
`;

exports[`I18nHelpers should attempt to perform a string replace: translate 1`] = `
{
  "emptyContext": "t(lorem.ipsum, {"context":" "})",
  "emptyPartialContext": "t(lorem.ipsum_hello, {"context":" "})",
  "localeKey": "t(lorem.ipsum)",
  "multiContext": "t(lorem.ipsum_hello, {"context":"world"})",
  "multiContextNested": "t(lorem.ipsum_hello_world_lorem_ipsum_dolor, {"context":"sit"})",
  "multiContextWithEmptyValue": "t(lorem.ipsum_hello, {"context":"world"})",
  "multiKey": "t([lorem.ipsum,lorem.fallback])",
  "placeholder": "t(lorem.ipsum, hello world)",
  "stringContext": "t(lorem.ipsum, {"context":"hello"})",
  "stringContextNested": "t(lorem.ipsum_hello_world_lorem_ipsum_dolor, {"context":"sit"})",
}
`;

exports[`I18nHelpers should attempt to perform translate with a node: translated node 1`] = `
<examplecomponent
  props="{
  "children": []
}"
>
  <div>
    t(lorem.ipsum, {"hello":"world"}, [object Object])
  </div>
</examplecomponent>
`;

exports[`I18nHelpers should attempt to place a test identifier around copy: test id 1`] = `
{
  "basic": <span
    class="curiosity-translate__test-id"
    data-test="lorem.ipsum"
  />,
  "basicNode": <testelementnode
    props="{
  "children": []
}"
  >
    <dolor-sit
      data-test="dolor-sit"
    />
  </testelementnode>,
  "basicString": <span
    class="curiosity-translate__test-id"
    data-test="dolor-sit"
  />,
  "emptyContext": <span
    class="curiosity-translate__test-id"
    data-test="lorem.ipsum"
  />,
  "emptyContextNode": <testelementnode
    props="{
  "children": []
}"
  >
    <dolor-sit
      data-test="dolor-sit"
    />
  </testelementnode>,
  "emptyContextString": <span
    class="curiosity-translate__test-id"
    data-test="dolor-sit"
  />,
  "emptyPartialContext": <span
    class="curiosity-translate__test-id"
    data-test="lorem.ipsum"
  />,
  "emptyPartialContextNode": <testelementnode
    props="{
  "children": []
}"
  >
    <dolor-sit
      data-test="dolor-sit"
    />
  </testelementnode>,
  "emptyPartialContextString": <span
    class="curiosity-translate__test-id"
    data-test="dolor-sit"
  />,
  "stringContextNested": <span
    class="curiosity-translate__test-id"
    data-test="lorem.ipsum"
  />,
  "stringContextNestedNode": <testelementnode
    props="{
  "children": []
}"
  >
    <dolor-sit
      data-test="dolor-sit"
    />
  </testelementnode>,
  "stringContextNestedString": <span
    class="curiosity-translate__test-id"
    data-test="dolor-sit"
  />,
}
`;

exports[`I18nHelpers should have specific functions: i18nHelpers 1`] = `
{
  "EMPTY_CONTEXT": "LOCALE_EMPTY_CONTEXT",
  "noopTranslate": [Function],
  "parseContext": [Function],
  "parseTranslateKey": [Function],
  "splitContext": [Function],
  "translate": [Function],
  "translateComponent": [Function],
}
`;
